# portoro-scraper-engine

./: .gitignore  .replit  DELIVERY_INSTRUCTIONS.md  DEPLOYMENT_GUIDE.md  FINAL_DELIVERY.md  GEMINI_BUILD_SPEC.md  Procfile  RAILWAY_DEPLOYMENT.md  README.md  README.replit.md  REPLIT_AGENT_PROMPT.md  REPLIT_AGENT_PROMPT_FINAL.md  UNIVERSAL_SCRAPER_GUIDE.md  USER_GUIDE.md  WEB_APP_READY.md  base.html  db.py  export_csv.py  extractor.py  main.py  models.py  pyproject.toml  railway.json  replit.md  replit.nix  requirements.txt  scrape_detail.html  scrapes.html  scrapes_partial.html  style.css  utils.py
api/: __init__.py  background.py  scraper_app.py
configs/: competitors_list.csv  example_site.yaml  test_30aescapes.yaml
data/: scraper.db
scripts/: batch_scrape_competitors.py  run_scrape.py  test_extractor.py  universal_property_scraper.py
src/: __init__.py  config.py  crawler.py  db.py  llm_extractor.py  main.py  models.py  normalizer.py
templates/: configs.html  index.html
templates/partials/: configs_partial.html
templates/scraper/: history.html  index.html
